--- a/public/application.css
+++ b/public/application.css
@@ -7660,7 +7660,7 @@
   color: #0b0c0c;
   padding: 0.5rem 0px;
   border-bottom: 6px solid #008938;
-  background: #FFF !important;
+  background: #ffffff !important;
 }
 
 .header-div-container {
@@ -7702,14 +7702,6 @@
   margin-left: 0.5rem;
   color: #0b0c0c;
   text-decoration: none;
-}
-
-.logo-link:link, .logo-link:visited {
-  color: #008938;
-}
-
-.header-logo-link:link {
-  color: rgb(29, 112, 184);
 }
 
 .header-logo-link {
@@ -7756,4 +7748,15 @@
   font-size: 18px;
   font-size: 1.125rem;
   line-height: 1.1111111111;
+}
+
+.govuk-tag.govuk-phase-banner__content__tag {
+  background-color: #1d70b8;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 16px;
+  letter-spacing: 1px;
 }
