--- a/src/views/layout/template.njk
+++ b/src/views/layout/template.njk
@@ -25,7 +25,7 @@
         <div class="header-logo-container"><img alt="Department for Environment Food &amp; Rural Affairs Logo" src="{{ assetPath }}/images/defra_logo.svg" width="52" height="42" decoding="async" data-nimg="1" class="defra-logo" loading="lazy" style="color:transparent">
           <a target="_blank" class="header-logo-link logo-link" href="https://www.gov.uk/government/organisations/department-for-environment-food-rural-affairs">
             <span class="defra-logo-text">Department for Environment <br> Food &amp; Rural Affairs</span></a>
-          <span class="govuk-header__service-name">Natural Capital Search Service</span></div>
+          <span class="govuk-header__service-name">{{serviceName}}</span></div>
       </div>
     </div>
   </header>
