--- a/src/views/screens/home/template.njk
+++ b/src/views/screens/home/template.njk
@@ -3,21 +3,21 @@
 {% from "partials/quick_search/macro.njk" import quickSearch %}
 
 {% block content %}
-  <div class="full-width-banner">
+  <header class="full-width-banner" role="banner">
     <div class="banner-container">
       <h1 class="govuk-heading-xl banner-container__heading-xl">Natural Capital Search Service</h1>
       <span class="govuk-caption-l banner-container__caption-l">Use this service to search for data and information about the environment and ecosystems in the UK. This service can be used to support natural capital approaches to evidence and decision making</span>
     </div>
-  </div>
+  </header>
 
   {{ quickSearch() }}
 
-  <div class="govuk-grid-row">
+  <article class="govuk-grid-row" role="article">
     <div class="govuk-grid-column-full video-container">
       <h1 class="govuk-heading-m govuk-\!-static-margin-0 video-container__heading-m">What is natural capital?</h1>
       <div class="video-container__frame">
         <iframe width="630" height="354" src="https://www.youtube.com/embed/4wx0rMruSJo?si=h-SD8VoSUSNwqo1S" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
     </div>
-  </div>
+  </article>
 {% endblock %}
