--- a/src/views/partials/quick_search/template.njk
+++ b/src/views/partials/quick_search/template.njk
@@ -13,11 +13,11 @@
       <span class="govuk-caption-m quick_search-container__caption-m">You can search by date, report title, theme or project codes, for example "seagrass beds, Porth Dinllaen, 2012".</span>
     {% endif %}
     <div class="search-block" data-module="search">
-      <form action="/search" method="get" role="search" class="search-block__form govuk-!-margin-bottom-6 govuk-!-margin-top-4">
+      <form action="{{ params.quickSearchPath }}" method="post" role="search" class="search-block__form govuk-!-margin-bottom-6 govuk-!-margin-top-4">
 
         {{ govukInput({
           id: 'search',
-          name: 'q',
+          name: 'search_term',
           label: {
             text: 'Search',
             classes: 'search-block__label',
