--- a/src/views/screens/results/template.njk
+++ b/src/views/screens/results/template.njk
@@ -50,10 +50,20 @@
               <span class="search-result__parameter-label">Published by</span>
               <span class="search-result__parameter-value">{{item.publishedBy}}</span>
             </div>
-            <div class="search-result__parameter">
-              <span class="search-result__parameter-label">Study period</span>
-              <span class="search-result__parameter-value">02 May 2023 to 04 July 2024</span>
-            </div>
+            {% if item.temporalExtentDetails.startDate or item.temporalExtentDetails.endDate %}
+              <div class="search-result__parameter">
+                <span class="search-result__parameter-label">Study period</span>
+                <span class="search-result__parameter-value">
+                  {% if item.temporalExtentDetails.startDate and item.temporalExtentDetails.endDate %}
+                    {{item.temporalExtentDetails.startDate | date("DD MMM YYYY")}} to {{item.temporalExtentDetails.endDate | date("DD MMM YYYY")}}
+                  {% elif item.temporalExtentDetails.startDate and not item.temporalExtentDetails.endDate %}
+                    {{item.temporalExtentDetails.startDate | date("DD MMM YYYY")}}
+                  {% elif not item.temporalExtentDetails.startDate and item.temporalExtentDetails.endDate %}
+                    {{item.temporalExtentDetails.endDate | date("DD MMM YYYY")}}
+                  {% endif %}
+                </span>
+              </div>
+            {% endif %}
             <p class="search-result__content">
               {{item.content}}
             </p>
