--- a/src/views/screens/home/template.njk
+++ b/src/views/screens/home/template.njk
@@ -27,7 +27,7 @@
     </div>
   </div>
 
-  <form action="/guided-search" method="get" role="guided-search">
+  <form action="{{dateSearchPath}}" method="get" role="guided-search">
     {{ govukButton({
       id: 'guided-search',
       name: 'guided-search',
