294976 - Geography questionnaire form strucutre

--- a/public/application.css
+++ b/public/application.css
@@ -7580,6 +7580,18 @@
   overflow: hidden;
 }
 
+.results-block {
+  border-bottom: 2px solid #b1b4b6;
+  padding-bottom: 30px;
+}
+.results-count-link {
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+  text-decoration-line: underline;
+}
+
 .app-main-class {
   padding-top: 10px;
   padding-bottom: 10px;
@@ -7754,6 +7766,12 @@
   font-weight: 700;
   line-height: 16px;
   letter-spacing: 1px;
+}
+
+.geography-fields__container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
 }
 
 .search-result__item {
