--- a/src/assets/sass/_root.scss
+++ b/src/assets/sass/_root.scss
@@ -5,8 +5,10 @@
 @import './tools/fonts';
 
 @import './components/search';
+@import './components/results_count';
 
 @import './templates/layout';
 @import './templates/home';
 @import './templates/header';
+@import './templates/geography';
 @import './templates/results';
