--- a/src/views/screens/guided_search/geography_questionnaire.njk
+++ b/src/views/screens/guided_search/geography_questionnaire.njk
@@ -39,11 +39,11 @@
         </div>
       </div>
     </div>
-    <div class="govuk-grid-row  govuk-!-margin-top-4 govuk-!-margin-bottom-2">
-      <div class="govuk-grid-column-one-half">
+    <div class="govuk-grid-row  govuk-!-margin-top-4 govuk-!-margin-bottom-2 geography-buttons">
+      <div class="govuk-grid-column-one-half geography-buttons__left">
         {{ govukButton({ text: "Previous question", classes: "govuk-button--secondary govuk-!-margin-bottom-0" }) }}
       </div>
-      <div class="govuk-grid-column-one-half govuk-button-group govuk-!-margin-bottom-0">
+      <div class="govuk-grid-column-one-half govuk-button-group govuk-!-margin-bottom-0 govuk-!-padding-right-0 geography-buttons__right">
         {{ govukButton({ text: "Skip question", classes: "govuk-button--secondary govuk-!-margin-bottom-0" }) }}
         {{ govukButton({ text: "Next question", id: dateFormOptions.submitButtonId, classes: "govuk-!-margin-bottom-0" }) }}
       </div>
