--- a/src/views/screens/home/template.njk
+++ b/src/views/screens/home/template.njk
@@ -11,7 +11,7 @@
     </div>
   </header>
 
-  {{ quickSearch() }}
+  {{ quickSearch({isResultPage: false, searchInputError : searchInputError}) }}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
