295004 - Fixed sonar build issues and minor improvements

--- a/src/views/screens/guided_search/geography_questionnaire.njk
+++ b/src/views/screens/guided_search/geography_questionnaire.njk
@@ -34,7 +34,7 @@
   </div>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <div id="coordinate-map" style="widht: 660px; height: 722px;"></div>
+      <div id="coordinate-map" style="width: 660px; height: 623px;"></div>
     </div>
   </div>
   <div class="govuk-grid-row">
