--- a/src/views/partials/quick_search/template.njk
+++ b/src/views/partials/quick_search/template.njk
@@ -26,7 +26,7 @@
             }
           },
           suffix: {
-            html: '<button type="submit" class="search-block__button">Search</button>'
+            html: '<button type="submit" class="search-block__button" data-do-quick-search="true">Search</button>'
           },
           classes: 'govuk-input govuk-!-margin-bottom-0 search-block__input',
           spellcheck: false,
