--- a/src/views/partials/results_count/template.njk
+++ b/src/views/partials/results_count/template.njk
@@ -1,7 +1,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    <div class="results-block">
-      <a href="#" class="govuk-link results-count-link">Click to see {{params.count}} results</a>
+    <div class="count-block">
+      <a href="{{params.resultsPath}}" class="govuk-link count-block-link" data-form-id="{{params.formId}}" data-fetch-count data-action="{{params.action}}"></a>
     </div>
   </div>
 </div>
