--- a/src/views/screens/guided_search/geography_questionnaire.njk
+++ b/src/views/screens/guided_search/geography_questionnaire.njk
@@ -8,7 +8,8 @@
 
 {% block head %}
   {{ super() }}
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v8.2.0/ol.css">
+  <link rel="stylesheet" href="{{ assetPath }}/css/ol.css">
+  <script src="{{ assetPath }}/scripts/ol.js"></script>
 {% endblock %}
 
 {% block beforeContent %}
@@ -24,7 +25,7 @@
 {% endblock %}
 
 {% block content %}
-  {{resultsCount({ count: 24 })}}
+  {{resultsCount({action: resultsCountPath, formId: formId, resultsPath: resultsPath})}}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full govuk-!-padding-top-6 govuk-!-padding-bottom-6">
       <h2 class="govuk-heading-l">What geography does it cover?</h2>
@@ -69,4 +70,9 @@
       </div>
     </div>
   </form>
+{% endblock %}
+
+{% block bodyEnd %}
+  {{ super() }}
+  <script type="module" src="{{ assetPath }}/scripts/renderMapToDrawPolygon.js"></script>
 {% endblock %}
