--- a/src/views/screens/home/template.njk
+++ b/src/views/screens/home/template.njk
@@ -33,7 +33,10 @@
     name: 'guided-search',
     text: "Start",
     isStartButton: true,
-    href: dateSearchPath
+    href: dateSearchPath,
+    attributes: {
+      'data-do-quick-search': false
+    }
   }) }}
 
   <article class="govuk-grid-row" role="article">
