--- a/src/views/screens/results/template.njk
+++ b/src/views/screens/results/template.njk
@@ -35,7 +35,7 @@
       <p>&nbsp;</p>
     </div>
     <div class="govuk-grid-column-two-thirds" id="results-block" data-action="{{getResultsPath}}" data-fetch-results>
-      Loading...Please wait.
+      Your search is being served...
     </div>
   </div>
 
