--- a/src/views/layout/template.njk
+++ b/src/views/layout/template.njk
@@ -78,5 +78,6 @@
     import {initAll} from '{{ assetPath }}/all.js'
     initAll()
   </script>
-  <script type="module" src="{{ assetPath }}/main.js"></script>
+  <script type="module" src="{{ assetPath }}/scripts/customScripts.js"></script>
+  <script type="module" src="{{ assetPath }}/scripts/fetchResults.js"></script>
 {% endblock %}
