--- a/src/views/screens/guided_search/geography_questionnaire.njk
+++ b/src/views/screens/guided_search/geography_questionnaire.njk
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block content %}
-  {{resultsCount({ count: 24 })}}
+  {{resultsCount({action: resultsCountPath, formId: formId, resultsPath: resultsPath})}}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full govuk-!-padding-top-6 govuk-!-padding-bottom-6">
       <h2 class="govuk-heading-l">What geography does it cover?</h2>
