311818 - Implementing the modal - WIP

--- a/src/views/partials/results/template.njk
+++ b/src/views/partials/results/template.njk
@@ -1,5 +1,6 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/select/macro.njk" import govukSelect %}
+{% from "partials/modal/macro.njk" import modal %}
 
 <div class="govuk-section-break--visible">
   <h2 class="govuk-heading-m">
