--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7516,6 +7516,30 @@
   text-decoration-line: underline;
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #2a3034;
+  opacity: 0.5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  background-color: #505a5f;
+  padding: 40px;
+  border: 5px solid #505a5f;
+  overflow: auto;
+}
+
+.modal-content {
+  text-align: center;
+}
+
 .app-main-class {
   padding-top: 10px;
   padding-bottom: 10px;
