--- a/src/views/partials/results/template.njk
+++ b/src/views/partials/results/template.njk
@@ -1,6 +1,5 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/select/macro.njk" import govukSelect %}
-{% from "partials/modal/macro.njk" import modal %}
 
 <div class="govuk-section-break--visible">
   <h2 class="govuk-heading-m">
@@ -80,4 +79,8 @@
       <p class="search-result__content search-result__content--empty">Search with different keywords.</p>
     </div>
   </div>
+{% endif %}
+
+{% if searchResults.total %}
+  {%- include "partials/open_data/template.njk" -%}
 {% endif %}
