--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7504,6 +7504,29 @@
   overflow: hidden;
 }
 
+.data-container {
+  display: grid;
+  grid-template-columns: auto;
+  grid-row-gap: 30px;
+}
+.data-container__heading-l {
+  font-size: 2.25rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px;
+  color: #ffffff;
+}
+.data-container__body-l {
+  font-size: 1.1875rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 24px;
+  color: #ffffff;
+}
+.data-container__button-group {
+  justify-content: center;
+}
+
 .count-block {
   border-bottom: 2px solid #b1b4b6;
   padding-bottom: 30px;
@@ -7523,17 +7546,23 @@
   width: 100%;
   height: 100%;
   background-color: #2a3034;
-  opacity: 0.5;
+  opacity: 0.6;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 999;
 }
 
 .modal {
   background-color: #505a5f;
-  padding: 40px;
-  border: 5px solid #505a5f;
+  padding: 40px 20px;
   overflow: auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+  width: 600px;
 }
 
 .modal-content {
