--- a/src/assets/sass/components/_modal.scss
+++ b/src/assets/sass/components/_modal.scss
@@ -5,17 +5,23 @@
   width: 100%;
   height: 100%;
   background-color: #2a3034;
-  opacity: 0.5;
+  opacity: 0.6;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 999;
 }
 
 .modal {
   background-color: govuk-colour("dark-grey");
-  padding: 40px;
-  border: 5px solid govuk-colour("dark-grey");
+  padding: 40px 20px;
   overflow: auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+  width: 600px;
 }
 
 .modal-content {
