--- a/src/views/partials/modal/template.njk
+++ b/src/views/partials/modal/template.njk
@@ -1,7 +1,6 @@
-<div id="overlay" class="overlay">
-  <div id="modal" class="modal">
-    <div class="modal-content">
-      This is modal content
-    </div>
+<div id="overlay" class="overlay"></div>
+<div id="modal" class="modal">
+  <div class="modal-content">
+    {% block modalContent %}{% endblock %}
   </div>
 </div>
