--- a/src/views/partials/results/template.njk
+++ b/src/views/partials/results/template.njk
@@ -1,34 +1,34 @@
-{% from "govuk/components/button/macro.njk" import govukButton %}
-{% from "govuk/components/select/macro.njk" import govukSelect %}
+{% from 'govuk/components/button/macro.njk' import govukButton %}
+{% from 'govuk/components/select/macro.njk' import govukSelect %}
 
-<div class="govuk-section-break--visible">
-  <h2 class="govuk-heading-m">
+<div class='govuk-section-break--visible'>
+  <h2 class='govuk-heading-m'>
     {% if searchResults.total %}
       {{searchResults.total}} results
           {% else %}
             0 results found
           {% endif %}
   </h2>
-  <div class="option-container">
+  <div class='option-container'>
     {{ govukSelect({
-        id: "sort",
-        name: "sort",
+        id: 'sort',
+        name: 'sort',
         label: {
-          text: "Sort by",
-          classes: "option-label"
+          text: 'Sort by',
+          classes: 'option-label'
         },
-        classes: "option-block",
+        classes: 'option-block',
         formGroup: {
-          classes: "option-group"
+          classes: 'option-group'
         },
         items: [
           {
-            value: "best_match",
-            text: "Best match"
+            value: 'best_match',
+            text: 'Best match'
           },
           {
-            value: "recent_study",
-            text: "Most recent study"
+            value: 'recent_study',
+            text: 'Most recent study'
           }
         ]
       }) }}
@@ -36,51 +36,53 @@
 </div>
 
 {% for item in searchResults.items %}
-  <div class="search-result__items">
-    <div class="govuk-section-break--visible search-result__item">
-      <h2 class="govuk-heading-m search-result__heading">{{item.title}}</h2>
-      <div class="search-result__parameter">
-        <span class="search-result__parameter-label">Published by</span>
-        <span class="search-result__parameter-value">{{item.publishedBy}}</span>
+  <div class='search-result__items'>
+    <div class='govuk-section-break--visible search-result__item'>
+      <h2 class='govuk-heading-m search-result__heading'>{{item.title}}</h2>
+      <div class='search-result__parameter'>
+        <span class='search-result__parameter-label'>Published by</span>
+        <span class='search-result__parameter-value'>{{item.publishedBy}}</span>
       </div>
       {% if item.temporalExtentDetails.startDate or item.temporalExtentDetails.endDate %}
-        <div class="search-result__parameter">
-          <span class="search-result__parameter-label">Study period</span>
-          <span class="search-result__parameter-value">
+        <div class='search-result__parameter'>
+          <span class='search-result__parameter-label'>Study period</span>
+          <span class='search-result__parameter-value'>
             {% if item.temporalExtentDetails.startDate and item.temporalExtentDetails.endDate %}
-              {{item.temporalExtentDetails.startDate | date("DD MMM YYYY")}} to {{item.temporalExtentDetails.endDate | date("DD MMM YYYY")}}
+              {{item.temporalExtentDetails.startDate | date('DD MMM YYYY')}} to {{item.temporalExtentDetails.endDate | date('DD MMM YYYY')}}
             {% elif item.temporalExtentDetails.startDate and not item.temporalExtentDetails.endDate %}
-              {{item.temporalExtentDetails.startDate | date("DD MMM YYYY")}}
+              {{item.temporalExtentDetails.startDate | date('DD MMM YYYY')}}
             {% elif not item.temporalExtentDetails.startDate and item.temporalExtentDetails.endDate %}
-              {{item.temporalExtentDetails.endDate | date("DD MMM YYYY")}}
+              {{item.temporalExtentDetails.endDate | date('DD MMM YYYY')}}
             {% endif %}
           </span>
         </div>
       {% endif %}
-      <p class="search-result__content">
+      <p class='search-result__content'>
         {{item.content}}
       </p>
-      <div class="govuk-button-group search-result__button-group">
+      <div class='govuk-button-group search-result__button-group'>
         {{ govukButton({
-                text: "Open data"
-              }) }}
-
+          text: 'Open data',
+        attributes: {
+          onclick: 'openDataModal("https://medin.org.uk")'
+        }
+        }) }}
         {{ govukButton({
-                text: "More info",
-                classes: "govuk-button--secondary"
-              }) }}
+          text: 'More info',
+          classes: 'govuk-button--secondary'
+        }) }}
       </div>
     </div>
   {% endfor %}
 
   {% if not searchResults.total %}
-    <div class="search-result__item">
-      <h2 class="govuk-heading-m search-result__heading search-result__heading--empty">There are no matching results</h2>
-      <p class="search-result__content search-result__content--empty">Search with different keywords.</p>
+    <div class='search-result__item'>
+      <h2 class='govuk-heading-m search-result__heading search-result__heading--empty'>There are no matching results</h2>
+      <p class='search-result__content search-result__content--empty'>Search with different keywords.</p>
     </div>
   </div>
 {% endif %}
 
 {% if searchResults.total %}
-  {%- include "partials/open_data/template.njk" -%}
+  {%- include 'partials/open_data/template.njk' -%}
 {% endif %}
