294976 - Update the quick search caption text

--- a/src/views/partials/quick_search/template.njk
+++ b/src/views/partials/quick_search/template.njk
@@ -11,7 +11,7 @@
       {% endif %}
     </h1>
     {% if not params.isResultPage %}
-      <span class="govuk-caption-m quick_search-container__caption-m">You can search by date, report title, theme or project codes, for example "seagrass beds, Porth Dinllaen, 2012".</span>
+      <span class="govuk-caption-m quick_search-container__caption-m">You can search by keyword, theme, title or project code, for example: "hedgehog population Bristol", "Community Supported Fisheries", "AE0101".</span>
     {% endif %}
     <div class="search-block" data-module="search">
       <form action="{{ params.quickSearchPath }}" id="{{params.formId}}" data-do-browser-storage method="post" role="search" class="search-block__form govuk-!-margin-bottom-6 govuk-!-margin-top-4">
