--- a/src/assets/sass/components/_search.scss
+++ b/src/assets/sass/components/_search.scss
@@ -10,7 +10,7 @@
   }
 
   &__caption-m {
-    width: 630px;
+    width: 640px;
     @include font-style-stack(19px, 25px, 300);
     color: $govuk-text-colour;
     padding-top: 20px;
@@ -55,7 +55,7 @@
     right: 0;
     border: 0;
     background-color: $gov-defra-color-websafe;
-    color: govuk-colour('white');
+    color: govuk-colour("white");
     cursor: pointer;
     padding: 0;
     width: 40px;
