311818 - Fetch new property related to the resourceLocator to put the URL on the modal

--- a/src/views/partials/results/template.njk
+++ b/src/views/partials/results/template.njk
@@ -68,7 +68,7 @@
           {{ govukButton({
             text: 'Open data',
             attributes: {
-              onclick: 'openDataModal("https://medin.org.uk")'
+              onclick: "openDataModal('" + item.resourceLocator + "')"
             }
           }) }}
 
